# pip-updater

./: LICENSE  README.md  pip-updater.json  pip-updater.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: pip-updater.yml
