[tool.poetry]
name = "pip-updater"
version = "0.1.0"
description = ""
authors = ["Edison Montes M. <edison.montes@gmail.com>"]
readme = "README.md"
packages = [{include = "pip_updater"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

